<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="profile"
            type="com.intentfilter.people.models.ViewableProfile" />

        <variable
            name="errors"
            type="com.intentfilter.people.validators.ValidationResult" />

        <variable
            name="isEditMode"
            type="Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/offWhite"
        android:theme="@style/PeopleTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/standard_margin">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/standard_margin"
                android:contentDescription="@string/choose_your_profile_picture"
                android:src="@drawable/ic_profile_edit"
                app:roundImageUrl="@{profile.profilePicturePath}" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                app:counterEnabled="true"
                app:counterMaxLength="256"
                app:errorEnabled="true"
                app:required="@{true}"
                app:validateAgainst="@{errors}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_display_name"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:text="@={profile.displayName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputActualFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="256"
                app:errorEnabled="true"
                app:required="@{true}"
                app:validateAgainst="@{errors}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editRealName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_real_name"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:text="@={profile.actualFullName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/viewBirthdayWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:required="@{true}"
                app:validateAgainst="@{errors}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/viewBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_birthday"
                    android:inputType="date"
                    android:text="@={profile.birthday}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/viewGenderWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:required="@{true}"
                app:validateAgainst="@{errors}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/viewGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_gender"
                    android:inputType="none"
                    android:text="@={profile.gender}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:required="@{true}"
                app:validateAgainst="@{errors}">

                <AutoCompleteTextView
                    android:id="@+id/viewLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="2"
                    android:hint="@string/hint_location"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoComplete"
                    android:singleLine="true"
                    android:text="@={profile.location}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/viewEthnicityWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/viewEthnicity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_ethnicity"
                    android:inputType="none"
                    android:text="@={profile.ethnicity}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/viewReligionWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/viewReligion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_religion"
                    android:inputType="none"
                    android:text="@={profile.religion}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{isEditMode ? View.GONE : View.VISIBLE}"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_height"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:text="@={profile.height}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/viewFigureTypeWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/viewFigureType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_figure"
                    android:inputType="none"
                    android:text="@={profile.figureType}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/viewMaritalStatusWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:required="@{true}"
                app:validateAgainst="@{errors}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/viewMaritalStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_marital_status"
                    android:inputType="none"
                    android:text="@={profile.maritalStatus}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="256"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_occupation"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@={profile.occupation}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="5000"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAboutMe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_about_me"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:text="@={profile.aboutMe}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:text="@{isEditMode ? @string/action_save : @string/action_create}" />

        </LinearLayout>

    </ScrollView>

</layout>