<resources>
    <string name="app_name">People</string>
    <string name="profile_image">Your Profile Image</string>
    <string name="choose_your_profile_picture">Choose your profile picture</string>
    <string name="hint_height">Specify your height (in centimetre)</string>
    <string name="action_save">Save</string>
    <string name="action_create">Create</string>

    <string name="title_gender">Select your gender</string>
    <string name="title_ethnicity">Select your Ethnicity</string>
    <string name="title_figure_type">Choose your figure type</string>
    <string name="title_marital_status">Choose marital status</string>

    <string name="message_loading">Fetching profile details, please wait.</string>
    <string name="message_storage_permission">Uploading picture needs permission</string>
    <string name="not_yet_fetched">The attributes have not been fetched yet. Please try after sometime.</string>
</resources>
